2 column layout issues, if the left col is not as tall as the 2nd and 1/3 class in the wrong place.

--- a/common/app/assets/stylesheets/layout/_layout.less
+++ b/common/app/assets/stylesheets/layout/_layout.less
@@ -38,6 +38,7 @@
     .one-third {
         width: 33%;
         float: right;
+        clear: right;
     }
     .two-thirds {
         width: 66%;
